--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">RF_Week02</string>
-    <string name="main_title">日常用品</string>
+    <string name="main_title">安心Go</string>
     <string name="dt_search">点击搜索</string>
     <string name="dt_sort">价格排序</string>
     <string name="dt_list">列表展示</string>
